[gd_scene load_steps=10 format=2]

[ext_resource path="res://obj_slime.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/slimeBlue_squashed.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26, 12 )

[node name="obj_slime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 51
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="floor_check" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_check" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_check"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="side_check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_check"]
position = Vector2( 0, 6 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="sfx_squash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -1.0

[connection signal="body_entered" from="top_check" to="." method="_on_top_check_body_entered"]
[connection signal="body_entered" from="side_check" to="." method="_on_side_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
